# camera_pkgs

./: CMakeLists.txt  README.md  package.xml
camera_action/: CMakeLists.txt  package.xml
camera_action/action/: camera_pkg.action
camera_pkg/: CMakeLists.txt  camera.yaml  charging_stating_sample  package.xml
camera_pkg/launch/: aruco_detector.launch  qr_realsense.launch  ros_image.launch  ros_rgbd.launch  sied_aruco_detector.launch  usb_cam.launch
camera_pkg/param/: camera.yaml  camera_ext.yaml  side_camera.yaml
camera_pkg/scripts/: arco_detector.py  outlet_example.py  pub_image_python.py  pyrealsense.py  qr_to_cmd_vel.py  ros_outlet.py
camera_pkg/src/: arco_detector.cpp  aruco_detector.cpp  astra.cpp  autocalib.cpp  ir_image.cpp  line_trace.cpp  mask_detector.cpp  outlet_detector.cpp  outlet_detector_with_marker.cpp  outlet_detector_with_marker.cpp.BK  pub_image.cpp  ros_image.cpp  ros_rgbd.cpp  simple_img.cpp  simple_img_draw.cpp  simplecv.cpp  yolo_outlet_detector.cpp
camera_pkg_msgs/: CMakeLists.txt  package.xml
camera_pkg_msgs/msg/: Coordinate.msg
launch/: line_trace_cpp.launch  qr_tracking.launch  record.launch  tracklive_usb.launch
msg/: Coordinate.msg
scripts/: demo.py  lanes_detection.py  mp4_to_bag.py  qr_to_cmd_vel.py  record.py  record_result.avi
src/: astra.cpp  canny_image.cpp  canny_ros.cpp  ir_image.cpp  line_trace.cpp  mask_detector.cpp  record_video_ros.cpp  ros_image.cpp  ros_rgbd.cpp  simple_img.cpp  sobel_image.cpp  test.cpp
videos/: outcpp.avi
